--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Students)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Students main.cpp)
+add_executable(Students main.cpp Subject.h Student.h StudentsDb.h Parser.h ConsoleHelper.h)
